--- a/bin/application/view/MainContainer.fxml
+++ b/bin/application/view/MainContainer.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.QueryController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -38,7 +38,7 @@
          <top>
             <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
               <items>
-                <Button mnemonicParsing="false" text="&gt;" textAlignment="CENTER" textFill="#1f13a1">
+                <Button mnemonicParsing="false" onAction="#insertData" text="&gt;" textAlignment="CENTER" textFill="#1f13a1">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
